# cuda-ctrl

./: .gitignore  CMakeLists.txt  README.md
include/: cuda-defines.h  cuda_defines.h  cuda_functions.h  entry_enum.h  entry_manager.h  hooks.h  log.h
src/: cuda_entries.cpp  entry_manager.cpp  hooks.cpp  log.cpp
